delete style css

--- a/postex.html
+++ b/postex.html
@@ -1,17 +1,67 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
   <meta charset="UTF-8">
   <title>رهگیری مرسوله با شناسه سفارش — پستکس</title>
-  <link rel="stylesheet" href="styles.css">
   <script src="https://developer.eitaa.com/eitaa-web-app.js"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      direction: rtl;
+      padding: 20px;
+      background: #f2f2f2;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    label,
+    input,
+    button {
+      display: block;
+      margin: 10px 0;
+      font-size: 1rem;
+    }
+
+    input {
+      padding: 8px;
+      width: 300px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #0056b3;
+    }
+
+    #result {
+      margin-top: 20px;
+      padding: 15px;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      white-space: pre-wrap;
+      font-family: monospace;
+    }
+  </style>
 </head>
+
 <body>
 
   <h1>رهگیری مرسوله با شناسه سفارش</h1>
-  
+
   <div id="userName"></div>
-  
+
   <label for="orderId">شناسه سفارش:</label>
   <input type="text" id="orderId" placeholder="مثلاً 123456789">
   <button onclick="trackOrder()">رهگیری</button>
@@ -19,7 +69,7 @@
   <div id="result"></div>
 
   <script>
-    function displayUserInfo(){
+    function displayUserInfo() {
       const user = window.Eitaa.WebApp.initDataUnsafe?.user;
       const userNameElement = document.getElementById('userName');
 
@@ -51,7 +101,7 @@
             method: 'GET',
             headers: {
               'Content-Type': 'application/json',
-              'x-api-key': 'postex_66b27f0c5624436FaBjNxK18x5WPLahsIvkyhepXGaXcg' 
+              'x-api-key': 'postex_66b27f0c5624436FaBjNxK18x5WPLahsIvkyhepXGaXcg'
             }
           }
         );
@@ -70,4 +120,5 @@
   </script>
 
 </body>
+
 </html>
