--- a/postex.html
+++ b/postex.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>رهگیری مرسوله با شناسه سفارش — پستکس</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>post tracking</title>
   <script src="https://developer.eitaa.com/eitaa-web-app.js"></script>
   <style>
     body {
@@ -58,13 +60,13 @@
 
 <body>
 
-  <h1>رهگیری مرسوله با شناسه سفارش</h1>
+  <h1>track orders</h1>
 
   <div id="userName"></div>
 
-  <label for="orderId">شناسه سفارش:</label>
+  <label for="orderId">Your order id:</label>
   <input type="text" id="orderId" placeholder="مثلاً 123456789">
-  <button onclick="trackOrder()">رهگیری</button>
+  <button onclick="trackOrder()">tracking</button>
 
   <div id="result"></div>
 
