--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
                 showDebugInfo({
                     eitaaSDK: typeof window.Eitaa !== 'undefined',
                     initData: window.Eitaa.WebApp.initData,
-                    platform: window.Eitaa.WebApp.platform,
-                    bg_color: window.Eitaa.WebApp.ThemeParams.bg_color,
+                    // platform: window.Eitaa.WebApp.platform,
+                    // bg_color: window.Eitaa.WebApp.ThemeParams.bg_color,
                     user: user
                 });
                 
