--- a/index.html
+++ b/index.html
@@ -358,13 +358,13 @@
                 const user = window.Eitaa.WebApp.initDataUnsafe?.user;
                 
                 // Show debug information
-                showDebugInfo({
-                    eitaaSDK: typeof window.Eitaa !== 'undefined',
-                    initData: window.Eitaa.WebApp.initData,
+                // showDebugInfo({
+                    // eitaaSDK: typeof window.Eitaa !== 'undefined',
+                    // initData: window.Eitaa.WebApp.initData,
                     // platform: window.Eitaa.WebApp.platform,
                     // bg_color: window.Eitaa.WebApp.ThemeParams.bg_color,
-                    user: user
-                });
+                    // user: user
+                // });
                 
                 // Display user information
                 displayUserInfo(user);
