--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">E</div>
-        <h1>Welcome to Eitaa Barnamak</h1>
+        <!-- <div class="logo">E</div> -->
+        <h1>رهگیری مرسولات پستی</h1>
         <div class="user_info">
             <span class="loading">Loading user data...</span>
         </div>
