--- a/index.html
+++ b/index.html
@@ -255,15 +255,10 @@
         
         <div class="debug-info" id="debugInfo" style="display: none;"></div>
 
-        <!-- <div class="platform-info" class="platformInfo" style="display: none;"></div> -->
-
-        <h1>track orders</h1>
-
-        <div id="userName"></div>
-
-        <label for="orderId">Your order id:</label>
+        <label for="orderId">شناسه سفارش شما:</label>
         <input type="text" id="orderId" placeholder="مثلاً 123456789">
-        <button onclick="trackOrder()">tracking</button>
+        <button onclick="trackOrder()">رهگیری</button>  
+        <!-- use MainButton of eitaa -->
 
         <div id="result"></div>
     </div>
