--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             waitForEitaa();
         }
 
-        document.getElementById('trackingButton').style.backgroundColor = window.Eitaa.WebApp.themeParams.button_text_color;
+        // document.getElementById('trackingButton').style.backgroundColor = window.Eitaa.WebApp.themeParams.button_text_color;
     </script>
 </body>
 </html>
